HW_W07D04 Jay initial commit

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,12 @@ body {
   background-color: #F52F4F;
   color: #FFFFFF;
 }
+
+.zero:before {
+  content: '[ ';
+}
+
+
+.zero:after {
+  content: ' ]';
+}
